# src/controller/ai.controller.ts
@@ -2,6 +2,7 @@ import { Request, Response, NextFunction } from "express";
 import reviewService from "../services/review.service";
 import { buildReviewPrompt } from "../prompt/review.prompt";
 import sqlService from "../services/sql.service";
+import errorService from "../services/error.service";
 
 export class AIController {
   async reviewCode(req: Request, res: Response, next: NextFunction) {
@@ -34,6 +35,30 @@ export class AIController {
       next(error);
     }
   }
+
+  explainError = async (req: Request, res: Response, next: NextFunction) => {
+
+    try {
+
+        const { language, error } = req.body;
+
+        const result = await errorService.explain(
+            language,
+            error
+        );
+
+        res.json({
+            success: true,
+            data: result
+        });
+
+    } catch (err) {
+
+        next(err);
+
+    }
+
+};
 }
 
 export default new AIController();
