# src/schemas/error.schema.ts
@@ -1,0 +1,6 @@
+import { z } from "zod";
+
+export const errorSchema = z.object({
+  language: z.string().min(1),
+  error: z.string().min(1),
+});
