# src/types/error.ts
@@ -1,0 +1,12 @@
+export interface ErrorExplanationResponse {
+    summary: string;
+
+    possibleCauses: string[];
+
+    solution: string[];
+
+    example: {
+        before: string;
+        after: string;
+    };
+}
